# git-vendor

./: .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Cargo.toml
.github/workflows/: Lint.yml
crates/git-set-attr/: Cargo.toml
crates/git-set-attr/src/: lib.rs
plumbing/: README.md
plumbing/git-filter-tree/: CHANGELOG.md  Cargo.toml  README.md
plumbing/git-filter-tree/src/: lib.rs
plumbing/git-set-attr/: Cargo.toml  README.md
src/: cli.rs  lib.rs  main.rs
tests/: vendor.rs
xtask/: Cargo.toml
