[package]
name = "git-filter-tree"
version = "0.0.2"
edition.workspace = true
publish.workspace = true
license.workspace = true
readme = "README.md"

[[bin]]
name = "git-filter-tree"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
git2.workspace = true
globset.workspace = true
clap = { workspace = true, optional = true }
